--- a/src/moveo_gazebo/package.xml
+++ b/src/moveo_gazebo/package.xml
@@ -7,6 +7,9 @@
   <maintainer email="fillio00@wp.pl">walkowiczf</maintainer>
   <license>Apache-2.0</license>
 
+  <depend>numpy</depend>
+  <depend>lxml</depend>
+
   <test_depend>ament_copyright</test_depend>
   <test_depend>ament_flake8</test_depend>
   <test_depend>ament_pep257</test_depend>
